--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ДЗ №12</string>
+    <string name="app_name">ДЗ №13</string>
     <string name="action_settings">Настройки</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="label_name">Имя</string>
@@ -37,5 +37,7 @@
     <string name="download_message">Данные обновляются. Пожалуйста, подождите...</string>
     <string name="key_use_rx">key_use_rx</string>
     <string name="useRX">Использовать RxJava для загрузки</string>
+    <string name="change_bkg">Цвет фона</string>
+    <string name="positionLabel">Место встречи</string>
 
 </resources>
